--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -78,7 +78,7 @@
   .main-header {
     width: 100%;
     height: 3.5rem;
-    background-color: #00695c;
+    background-color: blue;
     padding: 0 1.5rem;
     display: flex;
     align-items: center;
@@ -165,7 +165,7 @@
   .mobile-nav__item a.active,
   .mobile-nav__item button:hover,
   .mobile-nav__item button:active {
-    background: #00695c;
+    background: blue;
     color: white;
     border-radius: 3px;
   }
@@ -248,7 +248,7 @@
     text-decoration: none;
     font: inherit;
     border: 1px solid #00695c;
-    color: #00695c;
+    color: blue;
     background: white;
     border-radius: 3px;
     cursor: pointer;
