--- a/public/stylesheets/entry.css
+++ b/public/stylesheets/entry.css
@@ -16,6 +16,11 @@
     text-align: center;
 }
 
+.entry__date {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
+}
 .entry__description {
     text-align: center;
 }
