--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,11 +10,13 @@
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">E-mail</label>
-                <input type="email" name="title" id="title">
+                <input type="email" name="email" id="email">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
+            </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
         </form>
     </main>
