--- a/views/journal/add-entry.ejs
+++ b/views/journal/add-entry.ejs
@@ -8,7 +8,7 @@
 
     <main>
         <h1>Write About Your Day</h1>
-        <form class="entry-form" action="/journal/add-entry" method="POST">
+        <form class="entry-form" action="/entries" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title" value="">
@@ -18,13 +18,14 @@
                 <input type="text" name="imageUrl" id="imageUrl" value="">
             </div>
             <div class="form-control">
-                <label for="imageUrl">Date</label>
+                <label for="date">Date</label>
                 <input type="text" name="date" id="date" value="">
             </div>
             <div class="form-control">
                 <label for="description">Description</label>
                 <textarea name="description" id="description" rows="5"></textarea>
             </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         
             <button class="btn" type="submit">Finish Entry</button>
             
