--- a/views/journal/entry-detail.ejs
+++ b/views/journal/entry-detail.ejs
@@ -9,7 +9,7 @@
             <div class="image">
                 <img src="<%= entry.imageUrl %>" alt="<%= entry.title %>">
             </div>
-            <h2><%= product.price %></h2>
-            <p><%= product.description %></p>
+            <h2><%= entry.date %></h2>
+            <p><%= entry.description %></p>
         </main>
         <%- include('../includes/end.ejs') %>
